Fix nav on mobile

--- a/src/less/elements/menu-sidebar.less
+++ b/src/less/elements/menu-sidebar.less
@@ -76,7 +76,8 @@
         transform: translate3d(-200px, 0, 0);
     }
 
-    .navbar .nav .dropdown-menu>li>a {
+    .navbar .nav .dropdown-menu>li>a,
+    .navbar .nav .dropdown-menu>li>a:link {
         color:#fff;
     }
 
